--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# config file
+*.yaml
+*.db
+*.tmp
+
+# Folders
+tmp
+data
+secret
