--- a/core.yaml.sample
+++ b/core.yaml.sample
@@ -21,7 +21,9 @@ database:
   # 空闲时最大的连接数
   maxIdleConns: 20
   # 最大的连接数
-  maxOpenConns: 50    
+  maxOpenConns: 50
+  # 日志模式
+  logMode: Info   
 
 ###############################################################################
 #
